Bug 418662 - Some system tray icons become invisible when Medial Player starts
Summary: Some system tray icons become invisible when Medial Player starts
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Manjaro Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 418748 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-03-09 11:22 UTC by Kevin Kaland
Modified: 2020-05-04 17:21 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments
System Tray with issue (5.73 KB, image/png)
2020-03-09 11:22 UTC, Kevin Kaland
Details
screen recording on Neon unstable (945.70 KB, video/webm)
2020-05-01 02:20 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Kaland 2020-03-09 11:22:47 UTC
Created attachment 126695 [details]
System Tray with issue

SUMMARY

I use a dark theme (Sweet KDE). I am finding that certain tray icons that normally work are sometimes invisible after a restart. Often, restarting plasmashell will fix the issue for a while. This includes indirectly by logging out and back in. The issue occurs fairly consistently now. It seems to affect color icons; all the ones that do appear have an "outline" design.

STEPS TO REPRODUCE
1. Restart the computer
2. Log into a user session

OBSERVED RESULT
See attachment.

EXPECTED RESULT
Many of those blank spaces should have color icons in them.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.18.2
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-04-15 16:56:09 UTC
*** Bug 418748 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2020-04-15 16:56:13 UTC
*** Bug 419305 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2020-04-15 20:14:23 UTC
*** Bug 418460 has been marked as a duplicate of this bug. ***
Comment 4 Konrad Materka 2020-04-17 08:55:13 UTC
It affects only SNI (StatusNotifierItem) icons, plasmoids are fine.

For me, I updated KDE Neon yesterday and it happened.
Plasma 5.18.4, frameworks 5.69.0, Qt 5.14.1
I will try to investigate.
Comment 5 Nate Graham 2020-04-17 15:54:52 UTC
Thanks Konrad!
Comment 6 Nate Graham 2020-04-23 20:21:46 UTC
I just had this happen when I changed the Media Player plasmoid's tray icon to be "Always shown" or "Shown when relevant" and the relevancy condition triggers (i.e. I start playing a song). I usually have it always hidden. Making it appear in the visible part of the tray triggers this bug for me.
Comment 7 Konrad Materka 2020-04-23 20:59:03 UTC
I was not able to reproduce again...
Does it happen for only this icon or all SNI icons? In my case all SNI icons were not rendering.
Is the icon visible in System Tray settings?
What happens is you force-hide it in settings?
Comment 8 Nate Graham 2020-04-23 22:41:37 UTC
Argh, now I can't reproduce it anymore! :(
Comment 9 Patrick Silva 2020-04-26 10:53:16 UTC
I can reproduce this bug with my main user account on Neon unstable.
My test user account is not affected.
The bug occurs when I open Gwenview while the Media Player applet is NOT in use.
The systray icons reappear while Gwenview is open if I play something with Elisa, for example.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.1
Comment 10 Konrad Materka 2020-04-30 21:57:44 UTC
Patrick, are you still able to reproduce? Is it consistent or random? When it happens, are all SNI icons affected or only Media Player? Can you provide some steps and screenshots?
Comment 11 Patrick Silva 2020-05-01 02:20:08 UTC
Created attachment 128053 [details]
screen recording on Neon unstable

it happens almost always when I open Gwenview while Media Player applet is not in use. I'm attaching a screen recording.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 12 Konrad Materka 2020-05-01 10:10:26 UTC
We have two unrelated bugs here:
1. SNI icons are not rendered, but after click it is possible to run action etc, very hard to reproduce (original report from Kevin, it happened for me to)
2. Plasmoids are not rendered when Media Player plasmoid is used, easy to reproduce (Nate and Patrick).

Should we split this report into two?
Comment 13 Nate Graham 2020-05-01 13:08:26 UTC
Go right ahead.
Comment 14 Konrad Materka 2020-05-01 17:35:49 UTC
Fix for plasmoids/applets in: D29344
Comment 15 Konrad Materka 2020-05-02 13:50:47 UTC
SNI icon issue will be tracked in Bug 419305.
This one is only for issue with Medial Player plasmoid, after Gwenview start.
Comment 16 Konrad Materka 2020-05-02 13:53:44 UTC
*** Bug 418748 has been marked as a duplicate of this bug. ***
Comment 17 Konrad Materka 2020-05-04 09:49:49 UTC
Git commit 026a291742797345fbf7a7adce03bb7ff8c32f0b by Konrad Materka.
Committed on 04/05/2020 at 09:49.
Pushed by kmaterka into branch 'master'.

[applets/systemtray] Fix invisible plasmoid icons when Media Player is added

Summary:
After adding a new plasmoid (applet), for example a new Media Player, several empty icons are rendered in the system tray which hides existing icons.
The bug occurs after opening Gwenview while the Media Player applet is NOT in use.
The systray icons reappear when Gwenview is closed or another source starts playing.

Test Plan: Start Gwenview when Media Player is not in use. All icons should render correctly.

Reviewers: #plasma_workspaces, #plasma, ngraham, broulik, apol, davidedmundson, mart

Reviewed By: #plasma_workspaces, #plasma, mart

Subscribers: apol, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29344

M  +1    -0    applets/systemtray/package/contents/ui/items/ItemLoader.qml
M  +3    -1    applets/systemtray/systemtraymodel.cpp

https://commits.kde.org/plasma-workspace/026a291742797345fbf7a7adce03bb7ff8c32f0b
Comment 18 Konrad Materka 2020-05-04 10:36:42 UTC
SNI icon issue is tracked in Bug 419305.
The Media Player icon itself not rendering in Bug 420993.
Comment 19 Nate Graham 2020-05-04 13:40:32 UTC
Thanks! Is this by any chance backportable to the stable branch?
Comment 20 Konrad Materka 2020-05-04 17:21:35 UTC
There is no need to backport, it was a regression introduced after 5.18.

The original report (invisible SNI icons) was for Plasma 5.18.2, but it is not related a is now tracked in Bug 419305.