[applets/systemtray] Fix invisible plasmoid icons when Media Player is added

Summary:
After adding a new plasmoid (applet), for example a new Media Player, several empty icons are rendered in the system tray which hides existing icons.
The bug occurs after opening Gwenview while the Media Player applet is NOT in use.
The systray icons reappear when Gwenview is closed or another source starts playing.

BUG: 418662

Test Plan: Start Gwenview when Media Player is not in use. All icons should render correctly.

Reviewers: #plasma_workspaces, #plasma, ngraham, broulik, apol, davidedmundson, mart

Reviewed By: #plasma_workspaces, #plasma, mart

Subscribers: apol, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29344